--- a/index.html
+++ b/index.html
@@ -14,7 +14,32 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>review project</h1>
+    <main>
+      <section class="container">
+        <div class="title">
+          <h2>Our reviews</h2>
+          <div class="underline"></div>
+        </div>
+        <article class="review">
+          <div class="img-container">
+            <img src="./person-1.jpeg" id="person-img" alt="">
+          </div>
+          <h4 id="author">sara jones</h4>
+          <p id="job">UX designer</p>
+          <p id="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate inventore magni asperiores hic aperiam cum ipsum, cumque obcaecati, quis reiciendis dicta! Quos deleniti impedit laboriosam minima blanditiis voluptates assumenda tempore.</p>
+          <div class="button-container">
+            <button class="prev-btn">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="next-btn">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
+          <!--- random button-->
+          <button class="random-btn">suprise me</button>
+        </article>
+      </section>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
